ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: secureapi
spec:
  ingressClassName: nginx
  rules:
    - host: "api.example.com"
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-api-app-service
                port: 
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-api-app-service
                port: 
                  number: 80
